--- a/src/app/shared/layouts/main-layout/foot-bar/foot-bar.component.html
+++ b/src/app/shared/layouts/main-layout/foot-bar/foot-bar.component.html
@@ -1,3 +1,135 @@
-<div style="width: 100%;height:100px">
-    Foot Bar
-</div>
+<footer id="footerCntr" class="footerCntr ng-scope" data-ng-if=" !showpdf" ng-controller="footerCtrl">
+        <div class="footertop">
+            <div class="text-center">
+                <ul class="list-inline">
+                    <li><i class="icon icon-30 icon-circle pos-ad"></i> <strong>QUESTIONS?</strong> <span class="visit_support">Visit the <a gtmdir-config="" gtmdir-url="faqs" gtmdir-key="SeeFAQS1" ui-sref="faqs" href="/faqs"><strong>FAQs</strong></a></span></li>
+                    <li class="hidden-xs"><span class="or"><strong>OR</strong></span></li>
+                    <li class="hidden-xs"><strong class="text-uppercase">Get in Touch</strong></li>
+                    <li><i class="icon icon-20 phone-icon"></i> 1800 - 102 - 3335 <small>(8am - 8pm)</small></li>
+                    <li><i class="icon icon-20 email-icon"></i> <a href="mailto:helpdesk@edelweiss.in" gtmdir-config="" gtmdir-key="Supportmail">helpdesk@edelweiss.in</a></li>
+                    <li class="query"><i class="icon-b icon-20 icon-warn"></i> <a class="anc-query" href="https://www.edelweiss.in/faqs/13/191" gtmdir-config="">Query not resolved? Write to our Grievance Team.</a></li>
+                </ul>
+            </div>
+            <div class="visible-xs feedback-blk">
+                <a class="btn btn-clear btn-warning ftrfeedback-btn ng-isolate-scope" data-toggle="modal" id="edelFeedback" open-feedback-form="" gtmdir-config="" gtmdir-key="Feedback">Give Us Feedback</a>
+            </div>
+        </div>
+        <!--  / footer-bar \ -->
+        <section class="footer-bar">
+            <div class="container">
+                <div class="col-sm-3">
+                    <div class="promobar">
+                        <i class="icon icon-55 promo-icon hidden-xs"></i>
+                        <br>
+                        <a class="text-uppercase" gtmdir-config="" gtmdir-url="reasons-to-invest" gtmdir-key="Reasonstoinvest" ui-sref="reasons-to-invest" href="/reasons-to-invest"><i class="icon icon-55 promo-icon visible-xs"></i> 5 Reasons to invest with us <span class="circle-arrow"><img src="../assets/dist/assets/images/send-arrow.png" alt=""></span></a>
+                    </div>
+                </div>
+                <div class="col-sm-9">
+                    <div class="contents">
+                        <div class="row">
+                            <div class="col-sm-9">
+                                <div class="row">
+                                    <div class="col-xs-4">
+                                        <ul class="links">
+                                            <li><a ui-sref="about-us" gtmdir-config="" gtmdir-text="About Us" gtmdir-url="about-us" gtmdir-key="Footeroptions" href="/aboutus">About Us</a></li>
+                                            <li><a href="http://careers.edelweissfin.com/CRP/feDawsons Services/CRP/Careers.aspx" target="_blank" gtmdir-config="" gtmdir-key="JobsDawsons Services">Jobs at Dawsons Services</a></li>
+                                            <li><a ui-sref="location" gtmdir-config="" gtmdir-text="Locate Us" gtmdir-url="location" gtmdir-key="Footeroptions" href="/location">Locate Us</a></li>
+                                            <li><a ui-sref="partner-with-us" href="/partner-with-us">Partner with Us</a></li>
+                                            <li><a href="https://www.edelweiss.in/refer/?utm_source=invitereferrals-referrer&amp;utm_campaign=footer&amp;utm_medium=website" target="_blank">Refer &amp; Win</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <h6 class="HeadingFooter"><strong>Dawsons Services Platforms</strong></h6>
+                                        <ul class="links mg-l30" style="list-style-type: disc">
+                                            <li><a ui-sref="mobile-trader" gtmdir-config="" gtmdir-text="Mobile Trader" gtmdir-url="mobile-trader" gtmdir-key="Footeroptions" href="/edelweiss-mobile-trader-app">Mobile Trader</a></li>
+                                            <!--<li><a ui-sref="extreme-trader" gtmdir-config gtmdir-text="Xtreme Trader" gtmdir-url='extreme-trader' gtmdir-key="Footeroptions">Xtreme Trader </a></li>-->
+                                            <li><a ui-sref="tx3" gtmdir-config="" gtmdir-text="Terminal X3" gtmdir-url="extreme-trader" gtmdir-key="Footeroptions" href="/tx3">TX3</a></li>
+                                            <!--<li><a ui-sref="traders-lounge" gtmdir-config gtmdir-text="Traders Lounge" gtmdir-url='traders-lounge' gtmdir-key="Footeroptions">Trader's Lounge</a></li>-->
+                                        </ul>
+                                        <h6 class="HeadingFooter"><strong>Products</strong></h6>
+                                        <ul class="links mg-l30" style="list-style-type: disc">
+                                            <li><a target="_blank" href="https://www.edelweiss.in/cas/microsite/Wealth-Ultima/index.html" gtmdir-config="" gtmdir-text="Insurance" gtmdir-url="mobile-trader" gtmdir-key="Footeroptions">Insurance</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <ul class="links">
+                                            <li><a ui-sref="disclaimer" gtmdir-config="" gtmdir-text="Disclaimer" gtmdir-url="disclaimer" gtmdir-key="Footeroptions" href="/disclaimer">Disclaimer </a></li>
+                                            <li><a ui-sref="privacypolicy" gtmdir-config="" gtmdir-text="Privacy Policy" gtmdir-url="privacypolicy" gtmdir-key="Footeroptions" href="/privacypolicy">Privacy Policy </a></li>
+                                            <li><a ui-sref="termsofuse" gtmdir-config="" gtmdir-text="Terms of Use" gtmdir-url="termsofuse" gtmdir-key="Footeroptions" href="/termsofuse">Terms of Use</a></li>
+                                            <li><a ui-sref="codeofethicsandconduct" gtmdir-config="" gtmdir-text="Code of Ethics" gtmdir-url="codeofethicsandconduct" gtmdir-key="Footeroptions" href="/codeofethicsandconduct">Code of Ethics &amp; Conduct</a></li>
+                                            <li><a ui-sref="dos-donts" gtmdir-config="" gtmdir-url="dos-donts" gtmdir-key="DosandDonts" href="/dos-donts">Do's &amp; Don'ts</a></li>
+                                            <li><a ui-sref="important-links" href="/important-links">Important Links</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="socialtext hidden-xs">
+                                    <a href="https://old.edelweiss.in/?pg=newwebsite" target="_blank" class="btn btn-clear btn-visitwebsite" gtmdir-config="" gtmdir-key="Visitpreviousversion"><i class="icon-b icon-20 icon-visitd"></i> Visit previous version of website</a>
+                                    <p>Tell us how much you love or hate our brand new website </p>
+                                    <a class="btn btn-clear btn-warning ftrfeedback-btn ng-isolate-scope" data-toggle="modal" id="edelFeedback" open-feedback-form="" gtmdir-config="" gtmdir-key="Feedback">Give Us Feedback</a>
+                                </div>
+                                <ul class="list-unstyled list-inline sociallinks" itemscope="" itemtype="http://schema.org/Organization">
+                                    <li><a href="https://www.youtube.com/user/edelweiss" gtmdir-config="" gtmdir-key="youtube" target=" _blank" itemprop="sameAs"><i class="fa fa-youtube"></i></a></li>
+                                    <li><a href="https://www.facebook.com/edelweissonline/" gtmdir-config="" gtmdir-key="facebook" target="_blank" itemprop="sameAs"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://twitter.com/Dawsons Servicesonline" gtmdir-config="" gtmdir-key="twitter" target="_blank" itemprop="sameAs"><i class="fa fa-twitter"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-copyright">
+                        <div class="clearfix">
+                            <p class="pull-left">© All rights reserved 2016</p>
+                            <p class="pull-right">Designed by <a href="http://www.yoratechnologies.in/" target="_blank">Yora Technologies</a></p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-12">
+                    <div class="footer-copyright">
+                        <p class="disclaimer" itemprop="address" itemscope="" itemtype="http://schema.org/PostalAddress">
+                            Dawsons Services refers to Dawsons Services Broking Limited. Dawsons Services Broking Ltd: INZ000005231 (NSE, BSE and MCX-SX). Dawsons Services Broking Ltd. acts in the capacity of a distributor for Mutual Funds having AMFI Registration Number - 70892.<br>
+                            Mutual Fund Investments are subject to market risks. Please read all scheme related documents carefully before investing. Investment in the securities involves risks. The user is required to undergo risk profiling before investing. Guided view is indicative in nature and is based on the information provided by the user voluntarily. Each user of this information should make such investigation as it deems necessary to arrive at an independent evaluation of an investment in the securities of companies referred here (including the merits and risks involved), and should consult his own advisors to determine the merits and risks of such investment. Past performance is not necessarily a guide to future performance.<br>
+                            Broking and DP services offered by Dawsons Services Broking Limited under SEBI Registration No.: INZ000005231 (Member of NSE, BSE and MSE) and IN-DP-NSDL-314-2009 (DP with NSDL). Investor grievance resolution team: 040-40316936. Name of the Compliance Officer for Trading &amp; DP - Mr. Brijmohan Bohra, Email IDs: complianceofficer.ebl@edelweissfin.com / ebl.dpcompliance@edelweissfin.com. Corporate Office: Dawsons Services House, Off CST Road, Kalina, Mumbai - 400098; Tel. 18001023335/022-42722200/022-40094279.<br>
+                            Dawsons Services Comtrade Limited - Member of MCX - 10425, NCDEX - 00205, NEML - 10083. SEBI Registration no.: INZ000060936. Corporate Office: Dawsons Services House, Off CST Road, Kalina, Mumbai - 400098.Tel: +91 22 4009 4400 .Registered Office: Unit No. 801-804, Eighth Floor, Abhishree Avenue, Nehru Nagar, Ambawadi, Ahmedabad - 380015. Investor grievance resolution team: 040-40316936 or email to comtradehelp@edelweiss.in. Name of the Compliance Officer: Mr. Kamlesh Gujar, Email ID: comtrade.compliance@edelweissfin.com. TOC refers to Trade on Context.
+                        </p>
+                    </div>
+                    <div id="dvTickerHome" class="mg-t10">
+                        <div class="Ticker clearfix">
+                            <div class="marqueeheading">Attention Investors:</div>
+                            <div class="marqueeMessage">
+                                <marquee id="marqueeContent" onmouseout="this.setAttribute('scrollamount', 3, 0);" onmouseover="this.setAttribute('scrollamount', 0, 0);" direction="left" scrollamount="3">Broking services offered by&nbsp;-&nbsp;Dawsons Services Broking Ltd. under SEBI Registration no. INZ000005231 (NSE, BSE &amp; MSEI. Corporate office: Dawsons Services House, OFF CST Road, Kalina, Mumbai - 400098, Tel. (022) 4009 4400 / 2286 4400.&nbsp;&nbsp;|&nbsp;&nbsp;KYC is one time exercise while dealing in securities markets&nbsp;-&nbsp;Once KYC is done through a SEBI registered intermediary (broker, DP, Mutual Fund, etc.), you need not undergo the same process again when you approach another intermediary.&nbsp;&nbsp;|&nbsp;&nbsp;Prevent unauthorised transactions in your trading account&nbsp;-&nbsp;Update your mobile numbers/email IDs with your stock broker(s). Receive information of your transactions directly from exchange on your mobile/email at the end of the day.&nbsp;&nbsp;|&nbsp;&nbsp;Prevent unauthorized transactions in your demat account&nbsp;-&nbsp;Update your mobile number with your Depository Participant, to receive alerts on your registered mobile number for all debit and other important transactions in your demat account directly from NSDL/CDSL on the same day. - Issued in the interest of the investors.&nbsp;&nbsp;|&nbsp;&nbsp;SEBI Notification for all investors including retail individual investors for all public issues opening on or after January 01, 2016&nbsp;-&nbsp;No need to issue cheques by investors while subscribing to IPO. Just write the bank account number and sign in the application form to authorise your bank to make payment in case of allotment. No worries for refund as the money remains in investor's account.</marquee>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="dvTickerHome" class="mg-t10 mkt-sts">
+                        <div class="Ticker clearfix">
+                            <div class="pull-left clearfix">
+                                <div class="marqueeheading">Market Status:</div>
+                                <div class="marqueeMessage">
+                                    <!-- ngRepeat: mkt in lst --><span ng-repeat="mkt in lst" class="market-status ng-scope" style="">
+                                        <span ng-bind="mkt.exc" class="ng-binding">NSE</span>&nbsp;&nbsp;-&nbsp;&nbsp;
+                                        <span ng-bind="mkt.sts" ng-class="mkt.sts === 'Open'?'market-open':'market-closed'" class="ng-binding market-closed">Closed</span>
+                                    </span><!-- end ngRepeat: mkt in lst --><span ng-repeat="mkt in lst" class="market-status ng-scope">
+                                        <span ng-bind="mkt.exc" class="ng-binding">CDS</span>&nbsp;&nbsp;-&nbsp;&nbsp;
+                                        <span ng-bind="mkt.sts" ng-class="mkt.sts === 'Open'?'market-open':'market-closed'" class="ng-binding market-closed">Closed</span>
+                                    </span><!-- end ngRepeat: mkt in lst --><span ng-repeat="mkt in lst" class="market-status ng-scope">
+                                        <span ng-bind="mkt.exc" class="ng-binding">BSE</span>&nbsp;&nbsp;-&nbsp;&nbsp;
+                                        <span ng-bind="mkt.sts" ng-class="mkt.sts === 'Open'?'market-open':'market-closed'" class="ng-binding market-closed">Closed</span>
+                                    </span><!-- end ngRepeat: mkt in lst --><span ng-repeat="mkt in lst" class="market-status ng-scope">
+                                        <span ng-bind="mkt.exc" class="ng-binding">MCX</span>&nbsp;&nbsp;-&nbsp;&nbsp;
+                                        <span ng-bind="mkt.sts" ng-class="mkt.sts === 'Open'?'market-open':'market-closed'" class="ng-binding market-closed">Closed</span>
+                                    </span><!-- end ngRepeat: mkt in lst --><span ng-repeat="mkt in lst" class="market-status ng-scope">
+                                        <span ng-bind="mkt.exc" class="ng-binding">NCDEX</span>&nbsp;&nbsp;-&nbsp;&nbsp;
+                                        <span ng-bind="mkt.sts" ng-class="mkt.sts === 'Open'?'market-open':'market-closed'" class="ng-binding market-closed">Closed</span>
+                                    </span><!-- end ngRepeat: mkt in lst -->
+                                </div>
+                            </div>
+                            <div class="web-version pull-right"><p><a href="https://scores.gov.in/scores/Welcome.html" target="_blank" fatcablur="">SEBI SCORES</a> | Dawsons Services.In(TOC) - Ver. 1.0.0.4</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </footer>
