--- a/src/app/shared/layouts/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layouts/main-layout/nav-bar/nav-bar.component.html
@@ -25,8 +25,8 @@
                   <div id="bs-example-navbar-collapse-1" class="clearfix">
                       <ul class="nav navbar-nav nav-first">
                           <!-- ngIf: !isLoggedIn || !hasGoals -->
-                          <li ng-if="!isLoggedIn || !hasGoals" ng-class="{ 'active' : active=='gbaprelogin' }" gtmdir-config="" gtmdir-text="GUIDED PORTFOLIOS" gtmdir-url="gba-prelogin" gtmdir-key="Menuitems" class="ng-scope">
-                              <a ng-click="goToGBAPrelogin()" rel="2"><small>GUIDED</small>PORTFOLIOS</a> <!--ui-sref="gba-prelogin "  ng-click="goToGBAPrelogin()"-->
+                          <li>
+                              <a  routerLink="/gps" routerLinkActive="active" rel="2"><small>GUIDED</small>PORTFOLIOS</a> <!--ui-sref="gba-prelogin "  ng-click="goToGBAPrelogin()"-->
                           </li><!-- end ngIf: !isLoggedIn || !hasGoals -->
                           <!-- ngIf: isLoggedIn && hasGoals -->
                           <li ng-class="{ 'active' : active=='oyoEquity' || active=='oyoMutualFund' || active=='oyonewissues'}">
