--- a/src/app/shared/layouts/main-layout/nav-bar/nav-bar.component.html
+++ b/src/app/shared/layouts/main-layout/nav-bar/nav-bar.component.html
@@ -36,7 +36,7 @@
                                   <div class="container">
                                       <div class="SpaceLeft">
                                           <ul class="list-unstyled OwnInvestmenu">
-                                              <li gtmdir-config="" gtmdir-text="SELF INVESTING | mutualFunds" gtmdir-url="oyo/mutualFund" gtmdir-key="Menuitems" ng-class="{ 'active' : active=='oyoMutualFund' }"><a ui-sref="oyo/mutualFund" href="/oyo/mutualfund">Mutual Funds</a></li>
+                                              <li><a routerLink="/mutualfund" routerLinkActive="active" >Mutual Funds</a></li>
                                               <li gtmdir-config="" gtmdir-text="SELF INVESTING | Equity" gtmdir-url="oyo/equity" gtmdir-key="Menuitems" ng-class="{ 'active' : active=='oyoEquity' }"><a ui-sref="oyo-equity" href="/oyo/equity">Equity</a></li>
                                               <li gtmdir-config="" gtmdir-text="SELF INVESTING | Primary Market" gtmdir-url="oyo/new-issues" gtmdir-key="Menuitems" ng-class="{ 'active' : active=='oyonewissues' }"><a ui-sref="oyo-newissues" href="/new-issues">Primary Market</a></li>
                                               <li>
